--- a/css/style.css
+++ b/css/style.css
@@ -12,15 +12,18 @@ height: 100%;
    min-height: 400px;
   background-image: url("http://monikapatel.info/images/m4_lg-low.jpg") ;
   background-repeat:no-repeat !important;
-
-background-position:center;
-
+-webkit-background-size:cover !important;
+-moz-background-size:cover !important;
+-o-background-size:cover !important;
+background-size:cover !important;
+background-position:center !important;
+  
 }
 #header {
   
   background-repeat: no-repeat;
-  /*background-position: center center;
-    background-size: cover;*/
+  background-position: center center;
+    background-size: cover;
   box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
   color:white;
   text-shadow:0 1px 2px rgba(0,0,0,.2);
@@ -192,12 +195,10 @@ footer .social:hover{
     .hidden-unless-xs, .hidden-unless-sm, .hidden-unless-lg, .hidden-unless-xl {
         display: none !important;
     }
- #header {
-  -webkit-background-size:cover;
--moz-background-size:cover;
--o-background-size:cover;
-background-size:cover;
-   background-position: 80% 80%; 
+#header {
+    
+  background-position: 80% 80%;
+    
 
  }
    
@@ -211,10 +212,8 @@ background-size:cover;
         display: none !important;
     }
   #header {
-  -webkit-background-size:cover;
--moz-background-size:cover;
--o-background-size:cover;
-background-size:cover;
+    
+  background-position: 80% 80%;
     
 
  }
@@ -227,14 +226,6 @@ background-size:cover;
     .hidden-unless-xs, .hidden-unless-sm, .hidden-unless-md, .hidden-unless-lg {
         display: none !important;
     }
-	 #header {
-  -webkit-background-size:cover;
--moz-background-size:cover;
--o-background-size:cover;
-background-size:cover;
-    
-
- }
   
 }
 
